# AIReserve

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: lint.yaml
alembic/: env.py
alembic/versions/: 0e54a2ef4fb8_create_meetingroom_table.py  175387fc8e06_add_user_relationship_to_reservation.py  59476e493cd2_add_reservation_model.py  70b5da4d387c_added_user_model.py  9a689d58f046_add_description_to_meetingroom.py
app/: main.py
app/api/: meeting_room.py  routers.py  validators.py
app/api/endpoints/: __init__.py  meeting_room.py  reservation.py  user.py
app/core/: base.py  config.py  db.py  user.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: reservation.py
app/schemas/: meeting_room.py  reservation.py
docker_compose/: app.yaml  docker-compose.prod.yaml  storages.yaml
