[tool.poetry]
name = "aireserve"
version = "0.1.0"
description = "AIReserve: AI-Powered Meeting Room Reservation System"
authors = ["Lymar Volodymyr <shaxtar11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
