[tool.poetry]
name = "aireserve"
version = "0.1.0"
description = "AIReserve: AI-Powered Meeting Room Reservation System"
authors = ["Lymar Volodymyr <shaxtar11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
greenlet = "^3.1.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
